--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/estilos.css">
+
     <title>Super Mario Bros - O Filme</title>
   </head>
   <body>
@@ -31,10 +34,10 @@
           alt="logo chapéu Mario"
         />
       </a>
-      <nav class="menu">
+      <nav>
         <ul class="menu">
-          <li>Home</li>
-          <li>Detalhes</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Detalhes</a></li>
         </ul>
       </nav>
     </header>
