--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/estilos.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
 
     <title>Super Mario Bros - O Filme</title>
   </head>
@@ -57,6 +58,14 @@
         <button class="botao-trailer">Veja o Trailer</button>
       </div>
       <img class="mario" src="/src/imagens/super-mario-chars.png" alt="mario" />
+
+      <div class="modal">
+        <div class="conteudo-modal">
+        <span class="fechar-modal">X</span>
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Cb4WV4aXBpk" title="Trailer oficial" frameboader="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+
     </main>
   </body>
 </html>
