--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
           repellendus rem animi modi cupiditate quaerat error quasi saepe labore
           recusandae cum voluptate
         </p>
-        <button class="botao-trailer">Veja o Trailer</button>
+        <button id="botao-trailer" class="botao-trailer">Veja o Trailer</button>
       </div>
       <img class="mario" src="/src/imagens/super-mario-chars.png" alt="mario" />
 
       <div class="modal">
         <div class="conteudo-modal">
-        <span class="fechar-modal">X</span>
+        <span id="btn-x" class="fechar-modal">X</span>
         <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Cb4WV4aXBpk" title="Trailer oficial" frameboader="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
