--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           repellendus rem animi modi cupiditate quaerat error quasi saepe labore
           recusandae cum voluptate
         </p>
-        <button id="botao-trailer" class="botao-trailer">Veja o Trailer</button>
+        <button class="botao-trailer">Veja o Trailer</button>
       </div>
       <img class="mario" src="/src/imagens/super-mario-chars.png" alt="mario" />
 
@@ -66,6 +66,7 @@
         </div>
       </div>
 
+      <script src="src/js/index.js"></script>
     </main>
   </body>
 </html>
