--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
           alt="imagem do tílulo do filme"
         />
         <p class="descricao">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-          molestias ab fuga vero dignissimos corrupti, quidem officiis
-          repellendus rem animi modi cupiditate quaerat error quasi saepe labore
-          recusandae cum voluptate
+          Mario é um encanador junto com seu irmão Luigi. Um dia, eles vão parar
+          no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado
+          pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os
+          lugares.
         </p>
         <button class="botao-trailer">Veja o Trailer</button>
       </div>
