--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a>
         <img
           class="logo"
-          src="/src/imagens/logo-chapeu-mario.png"
+          src="./src/imagens/logo-chapeu-mario.png"
           alt="logo chapéu Mario"
         />
       </a>
@@ -46,7 +46,7 @@
       <div class="informacoes">
         <img
           class="imagem-titulo"
-          src="/src/imagens/titulo.png"
+          src="./src/imagens/titulo.png"
           alt="imagem do tílulo do filme"
         />
         <p class="descricao">
@@ -57,7 +57,7 @@
         </p>
         <button class="botao-trailer">Veja o Trailer</button>
       </div>
-      <img class="mario" src="/src/imagens/super-mario-chars.png" alt="mario" />
+      <img class="mario" src="./src/imagens/super-mario-chars.png" alt="mario" />
 
       <div class="modal">
         <div class="conteudo-modal">
