--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="fundo-video">
       <video class="video" autoplay loop muted>
-        <source src="/src/video/video-mario.mp4" type="video/mp4" />
+        <source src="./src/video/video-mario.mp4" type="video/mp4" />
       </video>
     </div>
 
